# scopetemp

./: README
firmware/: Makefile  ds1820.h  main.c  main.hex  requests.h  usbconfig.h
hw/: pwrjack.bak  pwrjack.mod  thermal-cache.lib  thermal.000  thermal.bak  thermal.brd  thermal.cmp  thermal.kicad_pcb  thermal.lst  thermal.net  thermal.pro  thermal.sch
hw/pcb2/: thermal-cache.lib  thermal.000  thermal.brd  thermal.cmp  thermal.net  thermal.sch
software/: CMakeLists.txt  Makefile.am  configure.ac  scopetemp.cc  scopetemp.h
software/src/: Makefile.am  common_indi.c  common_indi.h  guithermal.c  indithermal.c  logthermal.c  scopetemp.c  scopetemp.h  thermal_indi.c  thermal_indi.h
software/src/libindiclient/: Makefile  cmake_install.cmake
software/src/libindiclient/gtk/: indisave.c
